--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ body{
     border-radius: 1em;
 }
 
-.navBar{
+.navBut{
     font-size: 2em;
 }
 
@@ -44,11 +44,29 @@ body{
     cursor: pointer;
 }
 
+/* ======================================
+
+CHECK OUT SCROLLING SIDEBAR VIDEO ON TRAV. MEDIA
+
+=========================================*/
+
+/* .navSlider{
+    width: 20%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: rgba(17, 17, 17, 0.7)
+}
+
+ul{
+    padding: 0;
+} */
+
 .main {
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 40vw 60vw;
     grid-gap: 1em;
-    padding: 2em;
+    padding: 2rem;
     justify-items: center;
     align-items: center;
 }
@@ -65,22 +83,23 @@ body{
     text-align: center;
     padding: 1em;
     border-radius: 1em;
+    margin-bottom: 30vh;
 }
 
 .gameGrid{
     display: grid;
+    position: relative;
     width: 70%;
+    height: 100%;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 0.5em;
     background-color: black;
+    box-sizing: border-box;
 }
 
 .gridSection{
     display: grid;
-    position: relative;
-    padding-top: 35%;
-    padding-bottom: 35%;
     width: 100%;
     background-color: lightgrey;
     justify-content: center;
@@ -88,12 +107,15 @@ body{
 }
 
 #sectionOne{
+    height: 100%;
+    width:100%;
     font-size: 3em;
     font-weight: bolder;
     text-align: center;
     padding: 0;
     margin: 0;
     cursor: pointer;
+    content: "";
 }
 
 #sectionTwo{
