--- a/css/main.css
+++ b/css/main.css
@@ -182,12 +182,16 @@ MAIN GAME BODY
     text-align: center;
     border-radius: 1em;
     margin: 1em 0;
+    width: 300px;
+    height: 50px;
 }
 
 .messageBoard{
     border: solid black 2px;
+    width: 300px;
+    height: 50px;
     text-align: center;
-    padding: 1em;
+    /* padding: 1em; */
     border-radius: 1em;
     margin-bottom: 30vh;
 }
@@ -206,8 +210,8 @@ GAME PLAY AREA
 .gameGrid{
     display: grid;
     position: relative;
-    width: 70%;
-    height: 100%;
+    width: 500px;
+    height: 500px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 0.5em;
